# PIP_ArtisticWords

./: CHANGELOG.md  DEVELOPMENT_LOG.md  README.md  __init__.py  pyproject.toml  requirements.txt  test_renderer.py  test_visualize.py  use_only_svg_styles.py
.github/workflows/: base996.json  colorbase.json
config/: style_color_mapping.json
core/: effects_processor.py  effects_processor.py.bak  style_color_manager.py  style_manager.py  svg_parser.py  svg_style_converter.py  text_renderer.py
nodes/: PIP_AdvancedColorAnalyzer.py  PIP_ColorPicker.py  PIP_artistic_words_fusion.py  __init__.py  artistic_text_node.py  preview_node.py  single_style_manager.py  svg_recorder_node.py
tools/: svg_to_style.py
utils/: batch_convert_svg.py  color_analyzer.py  convert_huangfen.py  font_manager.py  image_utils.py  svg_converter.py  svg_generator.py  tensor_utils.py
workflow/: base996.json
